Fixed some styles to work properly on mobile devices

--- a/src/Zerbikat/BackendBundle/Resources/public/css/zerbikat.css
+++ b/src/Zerbikat/BackendBundle/Resources/public/css/zerbikat.css
@@ -1,24 +1,25 @@
-body{
+body {
     margin-top: 50px;
-/*    font-family: 'Alegreya Sans', sans-serif;  */
+    /*    font-family: 'Alegreya Sans', sans-serif;  */
 }
-.fitxaMenua
-{
+
+.fitxaMenua {
     margin-left: auto;
     margin-right: auto;
     padding-top: 40px;
     display: block;
     /*        background: rgba(255, 255, 165, 0.5);*/
-    position: fixed; /* could be absolute */
-    top: 0; right: 0;
+    position: fixed;
+    /* could be absolute */
+    top: 0;
+    right: 0;
 }
 
-.fitxaMenua UL
-{
+.fitxaMenua UL {
     list-style: none;
 }
-.fitxaMenua UL LI
-{
+
+.fitxaMenua UL LI {
     display: inline;
     margin-right: 20px;
 }
@@ -35,7 +36,6 @@ body{
     background-color: #902b2b !important;
 }
 
-
 .list-group-item.active,
 .list-group-item.active:hover,
 .list-group-item.active:focus {
@@ -43,7 +43,10 @@ body{
     border-color: #0071bd !important;
 }
 
-a.list-group-item-success:focus, a.list-group-item-success:hover, button.list-group-item-success:focus, button.list-group-item-success:hover {
+a.list-group-item-success:focus,
+a.list-group-item-success:hover,
+button.list-group-item-success:focus,
+button.list-group-item-success:hover {
     color: #0071bd;
     background-color: #a3d2f3;
 }
@@ -53,7 +56,8 @@ a.list-group-item-success:focus, a.list-group-item-success:hover, button.list-gr
     background-color: #d1e5f3;
 }
 
-a.list-group-item-success, button.list-group-item-success {
+a.list-group-item-success,
+button.list-group-item-success {
     color: #0071bd;
 }
 
@@ -62,7 +66,7 @@ a.list-group-item-success, button.list-group-item-success {
 }
 
 #logo_lerroa {
-    height: auto;
+    height: 70px;
     background-color: #FFFFFF;
     border-bottom: 1px solid #e7e7e7;
 }
@@ -90,6 +94,7 @@ a.list-group-item-success, button.list-group-item-success {
     padding-left: 0px !important;
     padding-right: 0px !important;
 }
+
 #goiburua {
     margin-left: 5px;
     margin-top: 5px;
@@ -102,10 +107,71 @@ a.list-group-item-success, button.list-group-item-success {
     text-decoration: none;
 }
 
-#goiburua a:hover {
-    text-decoration: none;
-    background-color: #fff;
-    padding-left: 0px !important;
-    padding-right: 0px !important;
-    color: #337ab7;
+@media only screen and (max-width: 990px) {
+    #logo_lerroa .nav>li>a:focus,
+    .nav>li>a:hover {
+        text-decoration: none;
+        background-color: transparent !important;
+    }
+    #goiburua {
+        text-align: center;
+        font-size: 3rem;
+        width: auto;
+        margin-left: auto;
+    }
+    .container {
+        width: 100%;
+    }
+    #itzuli_esteka {
+        float: right;
+        text-align: right;
+    }
+    .navbar-header {
+        float: left;
+        width: 100%;
+    }
+    #logo_lerroa div.navbar-header>ul.nav {
+        width: 100%;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .container {
+        width: auto;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+    #goiburua {
+        font-size: 2rem;
+        text-align: center;
+        width: 40%;
+        margin-left: auto;
+    }
+    #itzuli_esteka {
+        float: right;
+        width: auto;
+        text-align: right;
+        font-size: 1rem;
+    }
+    ul.nav li {
+        float: left;
+        width: auto;
+    }
+    img#logoa {
+        padding-left: 15px;
+        max-width: 100px;
+        max-width: auto;
+        height: auto;
+        width: auto;
+    }
+    #menu_lerroa {
+        margin-top: 70px;
+        margin-bottom: 0px;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    #goiburua {
+        display: none;
+    }
 }
